feat: feat: add API to create and update building entity
