# docs/swagger.yaml
@@ -14,6 +14,16 @@ definitions:
       error:
         type: string
     type: object
+  api.createBuildingRequest:
+    properties:
+      address:
+        type: string
+      name:
+        type: string
+    required:
+    - address
+    - name
+    type: object
 host: localhost:8080
 info:
   contact: {}
@@ -43,6 +53,36 @@ paths:
           schema:
             $ref: '#/definitions/api.ErrResponse'
       summary: Get buildings
+      tags:
+      - Building
+    post:
+      consumes:
+      - application/json
+      description: Create or update a building if already exists
+      operationId: create-or-update-building
+      parameters:
+      - description: building entity related data
+        in: body
+        name: input
+        required: true
+        schema:
+          $ref: '#/definitions/api.createBuildingRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/api.BuildingResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/api.ErrResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/api.ErrResponse'
+      summary: Create or update a building
       tags:
       - Building
   /buildings/{id}:
